# kynseed_saveeditor

./: .gitignore  Cargo.toml  README.md
saveedit_data/: HasStarRatingConditions.txt  HideQuantity.txt  ItemLookup.txt  LiquidItems.txt  PickupType.txt
src/: apothrecipes.rs  app.rs  cli_app.rs  config.rs  lootitems.rs  main.rs  savedata.rs
