[package]
name = "kynseed_saveeditor"
version = "0.5.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xot = "0.31"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
confy = "0.6"
strum = { version = "0.27", features = ["derive"] }

egui = "0.31"
egui_extras = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    #"accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
    #"persistence",   # Enable restoring app state when restarting the app.
] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2